fixtures/semantic/invalid/05-vr-c8-missing-intent-label.fl
component MissingIntentLabel {
  surface {}

  intent trigger: "action" {
  }
}
